# rad-ai-sentinel

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  native-release.yml
dicom-dose-audit/: .gitignore  LICENSE  README.md  pyproject.toml
dicom-dose-audit/docs/: REQUIREMENTS.md  RESEARCH.md
dicom-dose-audit/src/dicom_dose_audit/: __init__.py  config.py  schemas.py
dicom-dose-audit/src/dicom_dose_audit/analytics/: __init__.py  comparisons.py  grouping.py  missing.py  outliers.py  trends.py
dicom-dose-audit/src/dicom_dose_audit/app/: __init__.py
dicom-dose-audit/src/dicom_dose_audit/dicom/: __init__.py  reader.py  synthetic.py
dicom-dose-audit/src/dicom_dose_audit/report/: __init__.py
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DESKTOP_RELEASES.md  REQUIREMENTS.md  RESEARCH.md  ROADMAP.md  STUDY_PROTOCOL.md
docs/case_studies/: rsna_external_predictions.md
docs/versions/v0.1.0/: README.md
packaging/: entry_desktop.py
screenshots/: demo-pdf-export.webm
scripts/: build_native.py  check_dashboard_accessibility.py
src/rad_ai_sentinel/: __init__.py  analysis.py  audit.py  cli.py  config.py  exports.py  governance.py  multiclass_analysis.py  protocol.py  schemas.py
src/rad_ai_sentinel/app/: __init__.py  main.py
src/rad_ai_sentinel/data/: __init__.py  case_study.py  connectors.py  synthetic.py
src/rad_ai_sentinel/drift/: __init__.py  alerts.py  detection.py  missing.py  versions.py
src/rad_ai_sentinel/metrics/: __init__.py  binary.py  calibration.py  ci.py  curves.py  delong.py  multiclass.py  stratified.py
src/rad_ai_sentinel/plots/: __init__.py
src/rad_ai_sentinel/report/: __init__.py  generate.py
src/rad_ai_sentinel/report/templates/: report.html  styles.css
tests/: conftest.py  test_drift.py  test_governance_connectors.py  test_metrics.py  test_multiclass.py  test_product_surfaces.py  test_regression_fixtures.py  test_schemas.py
tests/fixtures/: malformed_probability.csv  missing_subgroup_fields.csv  small_sample_subgroups.csv
